--- a/Views/Card/Create.cshtml
+++ b/Views/Card/Create.cshtml
@@ -1,5 +1,84 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model CDC.Models.Card;
+@using CDC.Models.Enums;
+
 @{
+    ViewData["Title"] = "Cadastrar Carta";
+}
+
+<h2>@ViewData["Title"]</h2>
+
+<p>Insira os dados da carta a ser cadastrada.</p>
+
+<form asp-action="Create">
+    <div class="mb-3">
+        <label class="form-label">@Html.DisplayNameFor(model => model.Color)</label>
+        <div class="btn-group d-flex" role="group" aria-label="Basic checkbox toggle button group">
+
+            <input type="checkbox" class="btn-check" id="btncheck1" name="color" value="Branco" autocomplete="off">
+            <label class="btn btn-outline-secondary" for="btncheck1">Branco</label>
+
+            <input type="checkbox" class="btn-check" id="btncheck2" name="color" value="Azul" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btncheck2">Azul</label>
+
+            <input type="checkbox" class="btn-check" id="btncheck3" name="color" Value="Preto" autocomplete="off">
+            <label class="btn btn-outline-dark" for="btncheck3">Preto</label>
+
+            <input type="checkbox" class="btn-check" id="btncheck4" name="color" Value="Vermelho" autocomplete="off">
+            <label class="btn btn-outline-danger" for="btncheck4">Vermelho</label>
+
+            <input type="checkbox" class="btn-check" id="btncheck5" name="color" Value="Verde" autocomplete="off">
+            <label class="btn btn-outline-success" for="btncheck5">Verde</label>
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Type" class="form-label"></label>
+        <select asp-for="Type" class="form-select">
+            @foreach (var item in Enum.GetValues(typeof(CType)))
+            {
+                <option value="@item">@item</option>
+            }
+        </select>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Name" class="form-label">Nome</label>
+        <input asp-for="Name" class="form-control">
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <div class="mb-3">
+        <label asp-for="Set" class="form-label">Coleção</label>
+        <input asp-for="Set" class="form-control">
+        <span asp-validation-for="Set" class="text-danger"></span>
+    </div>
+    <div class="mb-3">
+        <label asp-for="IsFoil" class="form-label">É Foil?</label>
+        <select asp-for="IsFoil" class="form-select">
+            <option value="false">Não</option>
+            <option value="true">Sim</option>
+        </select>
+    </div>
+    <div class="mb-3">
+        <label asp-for="Condition" class="form-label">Condição</label>
+        <select asp-for="Condition" class="form-select">
+            @foreach (var item in Enum.GetValues(typeof(CCondition)))
+            {
+                <option value="@item">@item</option>
+            }
+        </select>
+    </div>
+    <div class="mb-3">
+        <label asp-for="Quantity" class="form-label">Quantidade</label>
+        <input asp-for="Quantity" class="form-control">
+        <span asp-validation-for="Quantity" class="text-danger"></span>
+    </div>
+    <button type="submit" Class="btn btn-primary">Enviar</button>
+    <a class="btn btn-secondary" asp-action="Index">Voltar para a Lista</a>
+</form>
+
+@section Scripts
+{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
