--- a/Views/Card/Detail.cshtml
+++ b/Views/Card/Detail.cshtml
@@ -11,34 +11,43 @@
 
 <hr class="hr" />
 
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Color)</dt>
-    <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Color)</dd>
-</dl>
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Type)</dt>
-    <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Type)</dd>
-</dl>
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Name)</dt>
-    <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Name)</dd>
-</dl>
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Set)</dt>
-    <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Set)</dd>
-</dl>
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.IsFoil)</dt>
-    <dd class="col-sm-10 fw-bold">@isFoil</dd>
-</dl>
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end  bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Condition)</dt>
-    <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Condition)</dd>
-</dl>
-<dl class="row my-1">
-    <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Quantity)</dt>
-    <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Quantity)</dd>
-</dl>
+<div class="d-flex">
+    @if(Model.Img != null)
+    {
+        <img style="height:400px" src="@Model.Img" alt="Capa" />
+    }
+    <div class="flex-fill">
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Color)</dt>
+            <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Color)</dd>
+        </dl>
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Type)</dt>
+            <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Type)</dd>
+        </dl>
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Name)</dt>
+            <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Name)</dd>
+        </dl>
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Set)</dt>
+            <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Set)</dd>
+        </dl>
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.IsFoil)</dt>
+            <dd class="col-sm-10 fw-bold">@isFoil</dd>
+        </dl>
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end  bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Condition)</dt>
+            <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Condition)</dd>
+        </dl>
+        <dl class="row my-1">
+            <dt class="col-sm-2 text-end bg-dark bg-opacity-10">@Html.DisplayNameFor(model => model.Quantity)</dt>
+            <dd class="col-sm-10 fw-bold">@Html.DisplayFor(model => model.Quantity)</dd>
+        </dl>
+    </div>
+</div>
+
 <hr class="hr" />
 
 <div>
