--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -13,7 +13,7 @@
 </div>
 <br />
 
-<table class="table table-hover">
+<table class="table table-hover" id="cardList">
     <thead class="thead-light">
         <tr>
             <th scope="col">@Html.DisplayNameFor(model => model.Color)</th>
@@ -45,3 +45,16 @@
         }
     </tbody>
 </table>
+
+@section scripts
+    {
+    <script>
+        $(document).ready(function () {
+            $('#cardList').DataTable({
+                language: {
+                    url: '//cdn.datatables.net/plug-ins/1.13.1/i18n/pt-BR.json'
+                }
+            });
+        });
+    </script>
+}
